# etl-airflow

./: docker-compose.yml
crawler-service/: .gitattributes  Dockerfile  README.md  e_01_coffee_crawler.csv  mysql_connect_test1.py  pyproject.toml
crawler-service/.devcontainer/: devcontainer.json  postCreateCommand.sh
crawler-service/data/accupass/: e_01_accupass_crawler_list.csv  e_02_accupass_crawler_address.csv  e_03_accupass_latlon.csv  e_04_accupass_clean.csv  t_04_accupass_clean.csv
crawler-service/data/cafe/: 02_taipei_cafe_all_latest.csv  cleaned_cafe_all.csv
crawler-service/data/hotel/: .~lock.accomo03_extract_booking.csv#
crawler-service/data/klook/: 01_klook_extract.py  02_klook_transform.py  accomo_data_to_server.py  get_detail.py  klook_data_to_server.py  main.py  spot_data_to_server.py  test.py
crawler-service/data/restaurant/: 02_restaurants(compared)_raw_latest.csv  cleaned_cafe.csv  cleaned_restaurants_all.csv  cleaned_restaurnants.csv  restaurant01_open_data_raw_latest.csv  restaurant03_googleapi_newdata.csv
crawler-service/data/spot/: spot03_googleapi_newdata.csv  spot04_compare_name_and_add_new.csv  spot05_extract_googlemap.csv
crawler-service/src/: test.py
crawler-service/src/accupass/: e_accupass_crawler.py  l_accupass_mysql_con.py  t_accupass_data_clean.py
crawler-service/src/food/: concat_all_to_food.py  e_craw_taipei_restaurant.py  food01_extract_get_opensource.py  food02_transform_filter.py  food03_extract_googleapi_text_search.py  food04_compare_name_and_add.py  food05_extract_google_info.py  food06_clean_openhours_name.py  (+3 more)
(+59 files in other folders)
