[project]
name = "tjr101-2"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "selenium (>=4.31.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "rapidfuzz (>=3.13.0,<4.0.0)",
    "googlemaps (>=4.10.0,<5.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "line-bot-sdk (>=3.17.0,<4.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "pymongo (>=4.12.0,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "charset-normalizer (>=3.4.1,<4.0.0)",
    "apache-airflow[celery,postgres]==2.10.5"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
